@@ -56,7 +56,7 @@ variables:
 	:Conventions = "CF-1.0";
 	:history = "History global attribute.\n";
 	:julian_day = 200000.04;
-	:RCS_Header = "$Header: /data/zender/nco_20150216/nco/data/in.cdl,v 1.135 2012-03-08 17:28:33 zender Exp $";
+	:RCS_Header = "$Header: /data/zender/nco_20150216/nco/data/in.cdl,v 1.136 2012-03-31 01:19:15 zender Exp $";
 
 	int date_int(date_dmn);
 	date_int:long_name = "Date (as array of ints: YYYY,MM,DD,HH,MM)";
@@ -298,11 +298,13 @@ variables:
 	float nan_arr(lat);
 	nan_arr:long_name = "Intended for array representation of IEEE NaN";
 	nan_arr:note = "20120308 Apparently netCDF ncgen chokes on variable names of nan and NaN";
+	nan_arr:note2 = "20120330 netCDF ncgen on AIX/bluefire chokes on variable/attribute values of nan";
 	nan_arr:_FillValue = nan;
 
 	float nan_scl;
 	nan_scl:long_name = "Intended for scalar representation of IEEE NaN";
 	nan_scl:note = "20120308 Apparently netCDF ncgen chokes on variable names of nan and NaN";
+	nan_scl:note2 = "20120330 netCDF ncgen on AIX/bluefire chokes on variable/attribute values of nan";
 	nan_scl:_FillValue = nan;
 
 	float nm_spc;
