@@ -1,5 +1,9 @@
 2012-03-30  Charlie Zender  <zender@uci.edu>
 
+	* Fix fundamental mistake in use of memset() in	nco_set_long()
+	Buggy method tried to fill tally array with ones quickly
+	Revert to slower but obviously correct array deferencing to fill tally
+
 	* Modify and test NC_FLOAT portion of nco_var_avg() for	NaN-compatibility
 	Verify that ncwa will work with missing value = NaN with this algorithm
 
